# purpledrop-driver

./: .gitattributes  .gitignore  Cargo.toml  ChangeLog.md  MANIFEST.in  Makefile  README.md  build.rs  record.py  serve.py  setParam.py  setPwm.py  setup.cfg  setup.py
.cargo/: config
.github/workflows/: build.yml
config/: default.toml  pdd.service
doc/: pi-setup.md
docs/: api.md  board_definitions.rst  calibration.md  commands.md  conf.py  index.rst  requirements.txt  simulated_device.rst
docs/reference/: electrode_board.md  index.md  messages.md  pdcam.md
jsclient/: .eslintrc.js  .gitignore  README.md  babel.config.js  package-lock.json  package.json
jsclient/src/: App.js  app.scss  index.js  pdsocket.js  rpc.js
protobuf/: messages.proto
purpledrop/: _version.py  calibration.py  controller.py  electrode_board.py  exceptions.py  message_framer.py  messages.py  move_drop.py  playback.py  purpledrop.py  server.py  simulated_purpledrop.py  video_client.py
purpledrop/boards/: misl_v3.json  misl_v4.1.json  misl_v4.json  misl_v5.json  misl_v6.1.json  misl_v6.2.json  misl_v6.json  misl_v7.0.json
purpledrop/pdcam/: grid.py  image_registration.py  plotting.py  server.py  video.py
purpledrop/protobuf/: messages_pb2.py
purpledrop/script/: pd_cli.py  pd_log.py  pd_record.py  pd_server.py  pdcam.py
src/: error.rs  eventbroker.rs  httpserver.rs  lib.rs  location.rs  purpledrop.rs  purpledrop_rpc.rs  settings.rs  video_client.rs  websocket.rs
src/devices/: driver.rs  hv507.rs  max31865.rs  mcp4725.rs  mod.rs  pca9685.rs  (+1 more)
tests/: test_electrode_board.py
(+29 files in other folders)
